syntax = "proto3";

option go_package = "./pb";

// "imageID":      "ffnn990",
// "title":        "post-post-modern Mona Lisa", // optional
// "description":  "A new reimagining of a classic painting" // optional

message UploadImageRequest {
  string token = 1;
  string author = 2;
  string title = 3;
  string description = 4;
  repeated string Tags = 5;
  bytes imageChunk = 6;
}

message UploadImageResponse {
  int64 imageID = 1;
  string error = 2;
}

message GetImageRequest {
  int64 imageID = 1;
}

message GetImageResponse {
  string author = 1;
  string title = 2;
  string description = 3;
  repeated string Tags = 4;
  bytes imageChunk = 5;
  string error = 6;
}

message GetImageListRequest {
  string author = 1;
  string tag = 2;
}

message GetImageListResponse {
  repeated int64 imageIDs = 1;
  string error = 2;
}

message ModifyImageRequest {
  int64 imageID = 1;
  string token = 2;
  string author = 3;
  string title = 4;
  string description = 5;
  repeated string Tags = 6;
}

message ModifyImageResponse {
  string error = 1;
}

message DeleteImageRequest {
  int64 imageID = 1;
  string token = 2;
}

message DeleteImageResponse {
  string error = 1;
}

message EmptyMessage {}